// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groupCommits should group commits with breaking changes 1`] = `
[
  {
    "breaking": [
      Commit {},
      Commit {},
    ],
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;

exports[`groupCommits should group commits with custom config 1`] = `
[
  {
    "custom": [
      Commit {},
    ],
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;

exports[`groupCommits should group commits with multiple releases 1`] = `
[
  {
    "feat": [
      Commit {},
    ],
    "release": Commit {},
  },
  {
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
    "release": Commit {},
  },
]
`;

exports[`groupCommits should group commits with no releases 1`] = `
[
  {
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;

exports[`groupCommits should group commits with no unreleased 1`] = `
[
  {
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
    "release": Commit {},
  },
]
`;

exports[`groupCommits should group commits with release 1`] = `
[
  {
    "feat": [
      Commit {},
    ],
  },
  {
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
    "release": Commit {},
  },
]
`;

exports[`groupCommits should group commits with unknown types 1`] = `
[
  {
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;

exports[`groupCommits should group unconventional commits 1`] = `
[
  {
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;

exports[`groupCommits should skip \`changelog\` scope by default 1`] = `
[
  {
    "feat": [
      Commit {},
      Commit {},
    ],
    "fix": [
      Commit {},
      Commit {},
    ],
    "misc": [
      Commit {},
      Commit {},
      Commit {},
    ],
  },
]
`;
